--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.4.14",
     "gatsby-plugin-postcss": "^6.8.0",
     "postcss": "^8.4.21",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1"
   }
 }
