--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-sharp": "^5.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
